JDK 11 migration - fix build issues